--- a/app/Tpl/fanwe/index.html
+++ b/app/Tpl/fanwe/index.html
@@ -465,7 +465,7 @@ $this->_var['indexcss'][] = $this->_var['TMPL_REAL']."/css/index.css";
               </ul>-->
               <ul class="tab-panel">
 			  <!--<li class="w560h490" style="top:0;left:0;"><a href="http://taobao.com" target="_blank"><img src="images/img17.jpg" /></a></li><li class="w210h140" style="top:0;left:560px;"><a href="http://taobao.com" target="_blank"><img src="images/img18.jpg" /></a></li><li class="w210h350" style="top:140px;left:560px;"><a href="http://taobao.com" target="_blank"><img src="images/img19.jpg" /></a></li><li class="w210h350" style="top:0;left:770px;"><a  href="http://taobao.com" target="_blank"><img src="images/img20.jpg" /></a></li><li class="w210h140" style="top:350px;left:770px;"><a href="http://taobao.com" target="_blank"><img src="images/img21.jpg" /></a></li>-->
-			  <li class="w980h490" style="top:0;left:0;"><a href="http://leshi1.com/xiaojz" target="_blank"><img src="images/img01-.jpg" /></a></li>
+			  <li class="w980h490" style="top:0;left:0;"><a href="javascript:void(0);" target="_blank"><img src="images/img01-.jpg" /></a></li>
               </ul>
 				<ul class="tab-panel">
                     <!--<li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/youhui.php?ctl=edetail&id=6" target="_blank"><img src="images/img01.jpg" /></a></li>-->
