--- a/app/Tpl/fanwe/mobile/mobile_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_index.html
@@ -5,7 +5,7 @@
     <div class="cis_wp" id="wp_menu"><section class="cis_slide cl">
         <div class="flexslider">
             <ul class="slides cl">
-                <li><a href="http://apple.com" ><img src="{$TMPL}/images/mobile/flash1.png"/></a></li>
+                <li><a href="javascript:void(0)" ><img src="{$TMPL}/images/mobile/flash1.png"/></a></li>
                 <li><a href="http://apple.com" ><img src="{$TMPL}/images/mobile/flash2.png"/></a></li>
                 <li><a href="http://apple.com" ><img src="{$TMPL}/images/mobile/flash3.png"/></a></li>
                 <li><a href="http://apple.com" ><img src="{$TMPL}/images/mobile/flash4.png"/></a></li>
