--- a/admin/Tpl/default/Public/login.html
+++ b/admin/Tpl/default/Public/login.html
@@ -107,6 +107,6 @@
   </tr>
 </table>
 </form>
-<div style=" width:170px; margin:15px auto; ">- 广州远维网络科技有限公司 -</div>
+<div style=" width:400px; margin:15px auto; font-size:14px; text-align: center;">- 广州几何营销策划有限公司 -</div>
 </body>
 </html>
