--- a/app/Tpl/fanwe/biz/biz_location_modify.html
+++ b/app/Tpl/fanwe/biz/biz_location_modify.html
@@ -71,7 +71,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td>图片：</td>
+				<td>LOGO图片：        285px*205px</td>
 				<td style="height:40px;padding-left:0;vertical-align:top;" class="no-border">
 					{function name="show_ke_image" v="preview" cn="$info.preview"}
 				</td>
