--- a/app/Tpl/fanwe/inc/header.html
+++ b/app/Tpl/fanwe/inc/header.html
@@ -76,7 +76,7 @@ var send_span = {function name="app_conf" v="SEND_SPAN"}000;
 <div id="mint" style="display:none;position:absolute;top:0;right:10px;">
 	<img src="images/ribbon1.png" alt="顶部广告" /></div>
 			<div class="wrap">
-				<div class="f_l" style="font-weight:bold; letter-spacing:1px;">
+				<div class="f_l" style="letter-spacing:1px;">
 				{$LANG.WELCOME}{function name="app_conf" value="SHOP_TITLE"}&nbsp;				
 				</div>
 				<div class="f_r">
