--- a/app/Tpl/fanwe/biz/biz_event_publish.html
+++ b/app/Tpl/fanwe/biz/biz_event_publish.html
@@ -100,7 +100,7 @@ $this->_var['youhuijs'][] = $this->_var['TMPL_REAL']."/js/jquery.ui.datepicker.j
 					</tr>
 				
 					<tr>
-						<td>图片：        203px*148px</td>
+						<td>活动图片：        203px*148px</td>
 						<td class="no-border">{function name="show_ke_image" v="icon"}</td>
 					</tr>			
 				<tr>
