--- a/app/Tpl/fanwe/biz/biz_youhui_publish.html
+++ b/app/Tpl/fanwe/biz/biz_youhui_publish.html
@@ -139,7 +139,7 @@ $this->_var['youhuijs'][] = $this->_var['TMPL_REAL']."/js/jquery.ui.datepicker.j
 						</tr>
 						
 						<tr>
-							<td>小图        164px*120px</td>
+							<td>优惠券小图：        164px*120px</td>
 							<td class="no-border" style="padding-left:0">{function name="show_ke_image" v="icon"}</td>
 						</tr>
 						<tr class="print_row">
