--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -123,6 +123,7 @@
                             }
                         </script>
                         <div class="failure" id="summary"><ul></ul></div>
+                        <input type="hidden" name="p_biz_id" value="{ $p_biz_id }" />
                         <div class="button-wrapper command">
                             <button class="sign-button submit" type="submit">注册M网</button>
                         </div>
