--- a/app/Tpl/fanwe/user_register.html
+++ b/app/Tpl/fanwe/user_register.html
@@ -174,7 +174,7 @@
 								{/if}
 								
 								<div class="blank"></div>
-								
+								<input type="hidden" name="p_biz_id" value="{ $p_biz_id }">
 								<div class="act">
 									<input type="submit" class="reg-submit-btn" id="signup-submit" name="commit" value="{$LANG.REGISTER}">				
 								</div>
