--- a/app/Tpl/fanwe/inc/footer.html
+++ b/app/Tpl/fanwe/inc/footer.html
@@ -25,6 +25,9 @@
 						?>
 						{function name="load_page_png" v=$logo_image}
 						</a>
+						<style>
+							.logo-footer > a > img {height: 72px !important;}
+						</style>
 					</div>
                 </li>
             </ul>
