--- a/app/Tpl/fanwe/inc/footer.html
+++ b/app/Tpl/fanwe/inc/footer.html
@@ -26,7 +26,7 @@
 						{function name="load_page_png" v=$logo_image}
 						</a>
 						<style>
-							.logo-footer > a > img {height: 72px !important;}
+							.logo-footer {padding-top: 10px !important;}
 						</style>
 					</div>
                 </li>
