--- a/app/Tpl/fanwe/inc/store_ajax_get_tuan.html
+++ b/app/Tpl/fanwe/inc/store_ajax_get_tuan.html
@@ -30,6 +30,6 @@
 	{/foreach}
 </div>
 <div class="blank"></div>
-<div class="pages" id="data_page_tuan">{$pages}</div>
+<div class="pages" id="data_page_tuan" style="position:relative; width:260px;">{$pages}</div>
 {/if}
 <div class="blank"></div>
