--- a/admin/Tpl/default/Scratch/index.html
+++ b/admin/Tpl/default/Scratch/index.html
@@ -47,7 +47,7 @@
             name="msg"
             checkbox="true"
             action="true"
-            datasource="list"
+            datasource="bonus_list"
             show="id:{%ID}|50px
 	,send_type|get_send_type_msg:{%SEND_TYPE}
 	,dest:{%SEND_DEST}
