--- a/app/Tpl/fanwe/biz/biz_location_modify.html
+++ b/app/Tpl/fanwe/biz/biz_location_modify.html
@@ -193,21 +193,21 @@
 				</td>
 			</tr>
 			
-			<tr>
+			<tr style="display:none;">
 				<td>SEO标题：</td>
 				<td>
 					<textarea class="f-textarea" name="seo_title"  style="width:60%; height:60px">{$info.seo_title}</textarea>
 				</td>
 			</tr>
 			
-			<tr>
+			<tr style="display:none;">
 				<td>SEO关键词：</td>
 				<td>
 					<textarea class="f-textarea" name="seo_keyword"  style="width:60%; height:60px">{$info.seo_keyword}</textarea>
 				</td>
 			</tr>
 			
-			<tr>
+			<tr style="display:none;">
 				<td>SEO描述：</td>
 				<td>
 					<textarea class="f-textarea" name="seo_description"  style="width:60%; height:60px">{$info.seo_description}</textarea>
