--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -110,7 +110,7 @@
         <script id="waterfall-tpl" type="text/x-handlebars-template">
             {{#result}}
             <tbody class="item">
-            <tr onclick="goto('{url x="youhui" r="store", p="act=view&id={{id}}"}')">
+            <tr onclick="goto('{url x="youhui" r="store#view" p="id=20"}')">
                     <td class="logo">
                     <img src="{{preview}}"/>
                     </td>
@@ -122,5 +122,11 @@
             </tr>
             </tbody>
             {{/result}}
+        </script>
+        <script>
+            var goto = function(href)
+            {
+                window.location.href = href;
+            }
         </script>
         {include file="mobile/inc/mobile_footer.html"}
