--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -110,7 +110,7 @@
         <script id="waterfall-tpl" type="text/x-handlebars-template">
             {{#result}}
             <tbody class="item">
-            <tr onclick="goto('{url x="youhui" r="store#view"}'+&id={{id}})">
+            <tr onclick="goto('{url x="youhui" r="store#view"}'+'&id={{id}}')">
                     <td class="logo">
                     <img src="{{preview}}"/>
                     </td>
