--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -26,7 +26,7 @@
                             <option value="0">女</option>
                         </select><span class="L-selected-select" id="gender">男</span>
                     </div></div>
-                        <div class="item-info-page"><span>生日</span>
+                        <div class="item-info-page" style="display:none;"><span>生日</span>
                             <div id="E_birthday">
                                 <p class="L-tab">
                                     <span class="L-item-tab L-select">
