remove email and bdate

--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -14,9 +14,9 @@
                             <a class="js-signin signin-switch with-icon" href="{url x="shop" r="user#login"}">登录<i class="icon-sign icon-sign-arrow"></i></a>
                             <a class="with-icon return" href="javascript:history.go(-1);"><i class="icon-sign icon-sign-arrow-l"></i><span class="js-title-label">返回</span></a>
                         </div>
-                        <div class="name input-wrapper">
+                        <!--<div class="name input-wrapper" style="display:none;">
                             <input required="" type="email" name="email" placeholder="电子邮箱">
-                        </div>
+                        </div>-->
                         <div class="email input-wrapper">
                             <input required="" type="text" name="user_name" placeholder="帐号（3到15位字符）" aria-haspopup="true" autocomplete="off">
                         </div>
