--- a/app/Tpl/fanwe/user_register.html
+++ b/app/Tpl/fanwe/user_register.html
@@ -38,12 +38,12 @@
 			<div class="user-lr-box-left f_l" style="width:600px">
 								<!--注册表单-->
 								<form action="{url x="shop" r="user#doregister"}" method="post" id="signup-user-form">
-								<div class="field email">
+								<!--<div class="field email">
 									<label for="signup-email-address">{$LANG.USER_TITLE_EMAIL}</label>
 									<input type="text" value="" class="f-input ipttxt" id="signup-email-address" name="email" size="30">
 									<span class="f-input-tip"></span> 
 									<span class="hint">{$LANG.USER_TITLE_EMAIL_TIP}</span> 
-								</div>
+								</div>-->
 								<div class="blank1"></div>
 								<div class="field username">
 									<label for="signup-username">{$LANG.USER_TITLE_USER_NAME}</label>
@@ -137,12 +137,12 @@
                                     <span class="hint"> </span>
                                 </div>
                                 <div class="blank1"></div>
-				<div class="field gender">
+				<!--<div class="field gender">
 					<label for="sex">出生日期</label>
 					<input name="bdate" class="f-input ipttxt datepicker" id="bdate"/>
 					<span class="f-input-tip"></span>
 					<span class="hint"> </span>
-				</div>
+				</div>-->
 				<div class="blank1"></div>
 
 								
@@ -200,13 +200,13 @@
 $(document).ready(function(){
 
 	$("#signup-submit").click(function(){
-		if($.trim($("#signup-email-address").val()).length == 0)
+		/*if($.trim($("#signup-email-address").val()).length == 0)
 		{
 			$("#signup-email-address").focus();
 			$.showErr("{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value=$LANG.USER_TITLE_EMAIL}");
 			
 			return false;
-		}
+		}*/
 
 		/*if($.trim($("#vcode").val()).length == 0)
 		{
@@ -216,12 +216,12 @@ $(document).ready(function(){
 			return false;
 		}*/
 
-		if(!$.checkEmail($("#signup-email-address").val()))
+		/*if(!$.checkEmail($("#signup-email-address").val()))
 		{
 			$("#signup-email-address").focus();			
 			$.showErr("{function name="sprintf" format=$LANG.FORMAT_ERROR_TIP value=$LANG.USER_TITLE_EMAIL}");
 			return false;
-		}
+		}*/
 		
 		if(!$.minLength($("#signup-username").val(),3,true))
 		{
@@ -258,12 +258,12 @@ $(document).ready(function(){
 			return false;
 		}
 
-        if ($.trim($("#bdate").val()).length == 0) {
+        /*if ($.trim($("#bdate").val()).length == 0) {
             $.showErr( "{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="出生日期"}" );
 
             return false;
         } else {
-        }
+        }*/
 
 		{if app_conf("MOBILE_MUST") eq 1}
 			if($.trim($("#settings-mobile").val()).length == 0)
@@ -292,7 +292,7 @@ $(document).ready(function(){
 	
 	
 	//开始绑定 
-	$("#signup-email-address").bind("blur",function(){
+	/*$("#signup-email-address").bind("blur",function(){
 		if($.trim($("#signup-email-address").val()).length == 0)
 		{
 			formError($("#signup-email-address"),"{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value=$LANG.USER_TITLE_EMAIL}");			
@@ -327,7 +327,7 @@ $(document).ready(function(){
 				}
 			}
 		});	
-	}); //邮箱验证
+	});*/ //邮箱验证
 	
 	
 	
@@ -438,7 +438,7 @@ $(document).ready(function(){
 			}
 		});*/
 
-        $("#bdate").bind("blur",function() {
+        /*$("#bdate").bind("blur",function() {
          if ($.trim($("#bdate").val()).length == 0) {
          formError($("#bdate"), "{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="出生日期"}" );
 
@@ -446,7 +446,7 @@ $(document).ready(function(){
          } else {
          formSuccess($("#bdate"),"");
          }
-         });
+         });*/
 
 	
 	{foreach from=$field_list item=field_item}
@@ -462,6 +462,6 @@ $(document).ready(function(){
 			{/if}
 	{/foreach}
 });
-        $("input[name='bdate']").datepicker({showAnim:'fadeIn'});
+        //$("input[name='bdate']").datepicker({showAnim:'fadeIn'});
 </script>
 {include file="inc/footer.html"}
