--- a/admin/Tpl/default/SupplierLocation/add.html
+++ b/admin/Tpl/default/SupplierLocation/add.html
@@ -188,7 +188,8 @@ var red_point = "__ROOT__/system/red_point.png";
 	<tr>
 		<td class="item_title">{%LOCATION_BRIEF}:</td>
 		<td class="item_input">
-		 <html:editor id="brief" name="brief" type="KINDEDITOR"  />
+		 <!--<bakhtml:bakeditor id="brief" name="brief" type="KINDEDITOR"  />-->
+        <html:editor id="brief" name="brief" type="textarea" style="width:750px;height:350px" /><br>
 		</td>
 	</tr>
 	<tr>
