--- a/admin/Tpl/default/SupplierLocation/edit.html
+++ b/admin/Tpl/default/SupplierLocation/edit.html
@@ -193,7 +193,7 @@ var red_point = "__ROOT__/system/red_point.png";
 		<td class="item_title">{%LOCATION_BRIEF}:</td>
 		<td class="item_input">
 			<!--<bakhtml:bakeditor id="brief" name="brief" type="KINDEDITOR"  />-->
-			<html:editor id="brief" name="brief" type="textarea" style="width:750px;height:350px" /><br>
+			<html:editor id="brief" name="brief" type="textarea" style="width:750px;height:350px" content="{$vo.brief}"/><br>
 		</td>
 	</tr>
 	<tr>
