--- a/app/Tpl/fanwe/store_view.html
+++ b/app/Tpl/fanwe/store_view.html
@@ -75,7 +75,10 @@ $this->_var['reviewcss'][] = $this->_var['TMPL_REAL']."/css/review_form.css";
 			<div class="blank"></div>
 					{if $store_info.brief}
 					<h3 class="pd10">店铺介绍</h2>
-					<div class="tag_info_item">{$store_info.brief}</div>
+					<div class="tag_info_item" style="    text-indent: 21.0pt;
+    mso-char-indent-count: 2.0;
+    line-height: 20pt;
+    font-size: 14px;">{$store_info.brief}</div>
 					{/if}
 			<div class="blank"></div>
 			<div class="blank"></div>
