--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -107,7 +107,7 @@
                 }
             });
         </script>
-        <bscript id="waterfall-tpl" type="text/x-handlebars-template">
+        <bscript id="bwaterfall-tpl" type="btext/x-handlebars-template">
             {{#result}}
             <tbody class="item">
             <tr onclick="goto('{url x="youhui" r="store#view"}'+'&id={{id}}')">
