--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -131,7 +131,7 @@
                 <td>
                     <h4>{{name}}</h4>
                     <p style="background:url('/app/Tpl/fanwe/images/store_info_logo_bg.png'); background-size: 100%; height: 120px;">
-                        <img src="/images/storelist/id={{id}}.jpg" style="width: 100%;"/>
+                        <img src="/images/storelist/id={{id}}.jpg" style="width: 98%; margin-left: 1%;"/>
                     </p>
                 </td>
                 </tr>
