--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -67,7 +67,7 @@
                             $('.waterfall-more').show();
                         }
                         $('#listtableid .item').each(function(){
-                            $(this).width($(window).width());
+                            $(this).width($(window).width() / 100 * 98);
                             //$(this).height($(window).width()/709*220);
                         });
                     },
@@ -126,11 +126,11 @@
         </bscript>
         <script id="waterfall-tpl" type="text/x-handlebars-template">
             {{#result}}
-            <tbody class="item">
+            <tbody class="item" style="width: 96%; margin-left: 2%; margin-right: 2%;">
                 <tr onclick="goto('{url x="youhui" r="store#view"}'+'&id={{id}}')">
                 <td>
                     <h4>{{name}}</h4>
-                    <p style="background:url('/app/Tpl/fanwe/images/store_info_logo_bg.png'); background-size: 100%; height: 120px;">
+                    <p style="background:url('/app/Tpl/fanwe/images/store_info_logo_bg.png'); background-size: 100%; height: 130px;">
                         <img src="/images/storelist/id={{id}}.jpg" style="width: 98%; margin-left: 1%;"/>
                     </p>
                 </td>
