--- a/app/Tpl/fanwe/mobile/mobile_store_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_index.html
@@ -67,7 +67,7 @@
                             $('.waterfall-more').show();
                         }
                         $('#listtableid .item').each(function(){
-                            $(this).width($(window).width());
+                            //$(this).width($(window).width());
                             //$(this).height($(window).width()/709*220);
                         });
                     },
