--- a/app/Tpl/fanwe/mobile/mobile_cart_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_cart_index.html
@@ -187,12 +187,12 @@
 </style>
 <body id="cis_list">
         <div class="body">
-        {include file="moible/inc/header_feature1.html"}
+        {include file="moible/inc/header_feature2.html"}
         <div class="inc" style="padding-top: 50px;">
-        <div class="inc_top button orange large" style="margin-bottom: 22px;"><a href="{url x="shop" r="uc_center"}" class="header-back"><span>返回</span></a>
+        <div class="inc_top button" style="margin-bottom: 10px; text-align: center; background-color: #ececec; color:#25a8e3; border-bottom:1px solid #25a8e3">
 {$page_title}</div>
     <div class="inc_main pd10">
-        {insert name="load_cart_index"}
+        {insert name="load_cart_index_mobile"}
     </div><!--end inc_main-->
     <div class="inc_foot"></div>
 </div>
