--- a/app/Tpl/fanwe/mobile/mobile_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_index.html
@@ -29,7 +29,8 @@
                     }
                 });
             });
-        </script><div class="cis_sitenv">
+        </script>
+        <div class="cis_sitenv">
             <ul class="cl">
                 <li><a href="{$APP_ROOT}/youhui.php?ctl=store"><img src="{$TMPL}/images/mobile/bn1.png" /><br />店铺</a></li>
                 <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&cid=0"><img src="{$TMPL}/images/mobile/bn2.png" /><br />新品</a></li>
