--- a/app/Tpl/fanwe/mobile/mobile_store_view.html
+++ b/app/Tpl/fanwe/mobile/mobile_store_view.html
@@ -203,7 +203,7 @@
     </script>
     <script id="waterfall-tpl" type="text/x-handlebars-template">
         {{#result}}
-        <div class="item">
+        <div class="item" onclick="window.location.href='{url x="shop" r="goods"}&id={{id}}'">
             <div class="info">
                 <img src="{{img}}" width="100%" height="auto" style="height:auto" />
                 <h2>{{title}}</h2>
