--- a/app/Tpl/fanwe/mobile/mobile_goods_info.html
+++ b/app/Tpl/fanwe/mobile/mobile_goods_info.html
@@ -264,7 +264,7 @@
             <div class="pd_box-border" style="background-color:#f6f6f6;">
             <!-- pd_product-desc -->
             <div class="pd_brand-search" style="position: relative;">
-                <a href="{url x="shop" r="store#view"}&id={$goods.supplier_info.id}" data-tpa="H5_DETAIL_CLICKBRAND" data-trackersend="1" style="width:90%">
+                <a href="{url x="youhui" r="store#view"}&id={$goods.supplier_info.id}" data-tpa="H5_DETAIL_CLICKBRAND" data-trackersend="1" style="width:90%">
                     <img src="{function name="get_spec_image" v=$goods.supplier_info.preview w="60" h="60"}">
 <span class="text">
 查看
@@ -279,14 +279,14 @@
                 </div>
             <div class="pd_detail-tab">
                 <div class="tab">
-                    <a href="javascript:;" class="item {if $type != 'comment'}cur{/if}" data-tpa="H5_DETAIL_DESC" data-trackersend="1" t="desc">图文详情</a>
-                    <a href="javascript:;" class="item {if $type == 'comment'}cur{/if}" data-tpa="H5_DETAIL_REVIEW" data-trackersend="1" t="comment">评论 {$comment_count}
+                    <a href="javascript:;" class="item {if $type neq 'comment'}cur{/if}" data-tpa="H5_DETAIL_DESC" data-trackersend="1" t="desc">图文详情</a>
+                    <a href="javascript:;" class="item {if $type eq 'comment'}cur{/if}" data-tpa="H5_DETAIL_REVIEW" data-trackersend="1" t="comment">评论 {$comment_count}
                     </a>
                 </div>
             </div>
             <div class="pd_detail-wrap" style="min-height: 558px;">
                 <!-- desc -->
-                <div class="pd_detail-tab-con desc" data-load="0" {if $type == 'comment'}style="display:none;"{/if}>
+                <div class="pd_detail-tab-con desc" data-load="0" {if $type eq 'comment'}style="display:none;"{/if}>
                     <style type="text/css">
                         img{max-width:none;}
                         .leftBckBtn{position:absolute; display:block; width:110px; height:70px; line-height:70px; left:-15px; top:-10px; text-indent:20px; text-decoration:none; font-size:28px;
@@ -298,7 +298,7 @@
                 <div class="pd_detail-tab-con parameter" data-load="0">
                 </div>
                 <!-- comment -->
-                <div class="pd_detail-tab-con comment" id="detail_box" data-load="0" {if $type != 'comment'}style="display:none;"{/if}>
+                <div class="pd_detail-tab-con comment" id="detail_box" data-load="0" {if $type neq 'comment'}style="display:none;"{/if}>
                     {insert name='load_goods_comment'} {* 动态团购点评 *}
                 </div>
                 <!-- after_service -->
